--- a/site/_layouts/post.html
+++ b/site/_layouts/post.html
@@ -51,7 +51,7 @@ layout: default
 
   <article class="post">
 
-    <div class="post__content">
+    <div class="post__content" data-cms-edit="content">
       {{ content }}
     </div>
 
